--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 
     <groupId>org.jboss.remotingjmx</groupId>
     <artifactId>remoting-jmx</artifactId>
-    <version>2.0.2.CR1-SNAPSHOT</version>
+    <version>2.0.2.Coriant1-SNAPSHOT</version>
 
     <parent>
         <groupId>org.jboss</groupId>
@@ -197,8 +197,22 @@
     </dependencies>
 
     <scm>
-        <connection>scm:git:git://github.com/jbossas/remoting-jmx.git</connection>
-        <developerConnection>scm:git:git@github.com:jbossas/remoting-jmx.git</developerConnection>
-        <url>https://github.com/jbossas/remoting-jmx</url>
+        <connection>scm:git:git://github.com/vveloso/remoting-jmx.git</connection>
+        <developerConnection>scm:git:git@github.com:vveloso/remoting-jmx.git</developerConnection>
+        <url>https://github.com/vveloso/remoting-jmx</url>
     </scm>
+	
+	<distributionManagement>
+		<repository>
+			<id>tnms-releases-repository</id>
+			<name>TNMS Releases repository</name>
+			<url>http://nexus-lis.intra.coriant.com/nexus/content/repositories/releases/</url>
+		</repository>
+		<snapshotRepository>
+			<id>tnms-snapshots-repository</id>
+			<name>TNMS Snapshots repository</name>
+			<url>http://nexus-lis.intra.coriant.com/nexus/content/repositories/snapshots/</url>
+		</snapshotRepository>
+	</distributionManagement>
+
 </project>
