Disable HTML validations on Javadoc lint and change SCM information to Git over HTTPS.

--- a/pom.xml
+++ b/pom.xml
@@ -22,9 +22,7 @@
   ~ 02110-1301 USA, or see the FSF site: http://www.fsf.org.
   -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.jboss.remotingjmx</groupId>
@@ -103,6 +101,25 @@
                     </bytecodeInjections>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <configuration>
+                    <additionalparam>-Xdoclint:accessibility,missing,reference,syntax</additionalparam>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <artifactId>maven-release-plugin</artifactId>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.maven.scm</groupId>
+                        <artifactId>maven-scm-provider-gitexe</artifactId>
+                        <version>1.9.4</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
         </plugins>
         <pluginManagement>
         	<plugins>
@@ -130,7 +147,7 @@
         								</goals>
         							</pluginExecutionFilter>
         							<action>
-        								<ignore></ignore>
+        								<ignore />
         							</action>
         						</pluginExecution>
         					</pluginExecutions>
@@ -197,22 +214,17 @@
     </dependencies>
 
     <scm>
-        <connection>scm:git:git://github.com/vveloso/remoting-jmx.git</connection>
-        <developerConnection>scm:git:git@github.com:vveloso/remoting-jmx.git</developerConnection>
+        <connection>scm:git:https://github.com/vveloso/remoting-jmx.git</connection>
+        <developerConnection>scm:git:https://github.com/vveloso/remoting-jmx.git</developerConnection>
         <url>https://github.com/vveloso/remoting-jmx</url>
     </scm>
 	
 	<distributionManagement>
 		<repository>
 			<id>tnms-releases-repository</id>
-			<name>TNMS Releases repository</name>
-			<url>http://nexus-lis.intra.coriant.com/nexus/content/repositories/releases/</url>
+			<name>Third Party Releases repository</name>
+			<url>http://nexus-lis.intra.coriant.com/nexus/content/repositories/thirdparty/</url>
 		</repository>
-		<snapshotRepository>
-			<id>tnms-snapshots-repository</id>
-			<name>TNMS Snapshots repository</name>
-			<url>http://nexus-lis.intra.coriant.com/nexus/content/repositories/snapshots/</url>
-		</snapshotRepository>
 	</distributionManagement>
 
 </project>
