--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 
     <groupId>org.jboss.remotingjmx</groupId>
     <artifactId>remoting-jmx</artifactId>
-    <version>2.0.2.Coriant1</version>
+    <version>2.0.2.Coriant2-SNAPSHOT</version>
 
     <parent>
         <groupId>org.jboss</groupId>
@@ -217,7 +217,7 @@
         <connection>scm:git:https://github.com/vveloso/remoting-jmx.git</connection>
         <developerConnection>scm:git:https://github.com/vveloso/remoting-jmx.git</developerConnection>
         <url>https://github.com/vveloso/remoting-jmx</url>
-      <tag>2.0.2.Coriant1</tag>
+      <tag>HEAD</tag>
   </scm>
 	
 	<distributionManagement>
